--- a/projects/playground/src/app/pages/progress/progress.page.scss
+++ b/projects/playground/src/app/pages/progress/progress.page.scss
@@ -1,7 +1,5 @@
 .page {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
+  display: block;
 }
 
 /* Linear matrix */
